# tranp

./: .gitignore  Cargo.toml  README.md
src/: amount.rs  csv.rs  csv_utils.rs  main.rs  processor.rs  types.rs
testdata/: input.csv  output.csv  test1.csv
