[package]
name = "txn_processor"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0.89"
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
primitive_fixed_point_decimal = { version = "0.1.6", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
